--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 
 20221119121639Twitch.txt
 GetWebData.ahk
+TikTokhtml.html
+Twitchhtml.html
+Twitterhtml.html
+YouTubehtml.html
+Instagramhtml.html
