--- a/page/_config.yml
+++ b/page/_config.yml
@@ -1,4 +1,6 @@
 remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
-show_downloads: false
+show_downloads: true
+permalink: /terms_of_service/
+permalink: /privacy_policy/
