--- a/page/_config.yml
+++ b/page/_config.yml
@@ -2,5 +2,5 @@ remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 show_downloads: false
-permalink: /terms_of_service/default/
-permalink: /privacy_policy/default/
+permalink: /terms_of_service/
+permalink: /privacy_policy/
