--- a/page/privacy_policy/_config.yml
+++ b/page/privacy_policy/_config.yml
@@ -4,3 +4,10 @@ plugins:
 show_downloads: false
 layout: default
 permalink: /
+nav:
+  - { name: "Home", link: "/" }
+  - { name: "Downloads", link: "/#download" }
+  - { name: "Installation", link: "/#installation" }
+  - { name: "Abschließende Worte", link: "/#abschlieende-worte" }
+  - { name: "Terms of Service", link: "/terms_of_service" }
+  - { name: "Privacy Policy", link: "/privacy_policy" }
