--- a/page/_data/navigation.yml
+++ b/page/_data/navigation.yml
@@ -3,7 +3,7 @@
 - name: "Abschließende Worte"
   link: "#abschlieende-worte"
 - name: "Terms of service"
-  link: "/ReadyxChalloBingBong/terms_of_service.md
+  link: "/ReadyxChalloBingBong/terms_of_service.md"
 - name: "Privacy Policy"
   link: "/ReadyxChalloBingBong/privacy_policy.md"
 
