--- a/page/_data/navigation.yml
+++ b/page/_data/navigation.yml
@@ -3,8 +3,8 @@
 - name: "Abschließende Worte"
   link: "#abschlieende-worte"
 - name: "Terms of service"
-  link: "/ReadyxChalloBingBong/terms_of_service.md"
+  link: "/ReadyxChalloBingBong/terms_of_service.html"
 - name: "Privacy Policy"
-  link: "/ReadyxChalloBingBong/privacy_policy.md"
+  link: "/ReadyxChalloBingBong/privacy_policy.html"
 
 
