--- a/page/_data/navigation.yml
+++ b/page/_data/navigation.yml
@@ -1,10 +1,10 @@
 - name: "Home"
-  link: "/ReadyxChalloBingBong/"
+  link: "./"
 - name: "Abschließende Worte"
   link: "#abschlieende-worte"
 - name: "Terms of service"
-  link: "/ReadyxChalloBingBong/terms_of_service.md"
+  link: "./terms_of_service.md"
 - name: "Privacy Policy"
-  link: "/ReadyxChalloBingBong/privacy_policy.md"
+  link: "./privacy_policy.md"
 
 
