--- a/page/_data/navigation.yml
+++ b/page/_data/navigation.yml
@@ -1,5 +1,7 @@
 - name: "Home"
   link: "./"
+- name: "Download"
+  link: "#download"
 - name: "Abschließende Worte"
   link: "#abschlieende-worte"
 - name: "Terms of service"
