--- a/page/_data/navigation.yml
+++ b/page/_data/navigation.yml
@@ -5,8 +5,8 @@
 - name: "Abschließende Worte"
   link: "#abschlieende-worte"
 - name: "Terms of service"
-  link: "./terms_of_service.md"
+  link: "./terms_of_service"
 - name: "Privacy Policy"
-  link: "./privacy_policy.md"
+  link: "./privacy_policy"
 
 
