--- a/page/_data/navigation.yml
+++ b/page/_data/navigation.yml
@@ -1,9 +1,9 @@
 - name: "Home"
   link: "./"
 - name: "Download"
-  link: "#download"
+  link: "./#download"
 - name: "Abschließende Worte"
-  link: "#abschlieende-worte"
+  link: "./#abschlieende-worte"
 - name: "Terms of service"
   link: "./terms_of_service"
 - name: "Privacy Policy"
