--- a/page/_data/navigation.yml
+++ b/page/_data/navigation.yml
@@ -1,9 +1,9 @@
 - name: "Home"
-  link: "./"
+  link: "./README"
 - name: "Download"
-  link: "./#download"
+  link: "./README#download"
 - name: "Abschließende Worte"
-  link: "./#abschlieende-worte"
+  link: "./README#abschlieende-worte"
 - name: "Terms of service"
   link: "./terms_of_service"
 - name: "Privacy Policy"
