--- a/page/_data/navigation.yml
+++ b/page/_data/navigation.yml
@@ -1,9 +1,5 @@
-- name: "Home"
-  link: "./README"
-- name: "Download"
-  link: "./README#download"
-- name: "Abschließende Worte"
-  link: "./README#abschlieende-worte"
+- name: "ChalloBingBong"
+  link: "./"
 - name: "Terms of service"
   link: "./terms_of_service"
 - name: "Privacy Policy"
