--- a/page/_data/navigation.yml
+++ b/page/_data/navigation.yml
@@ -1,5 +1,5 @@
 - name: "ChalloBingBong"
-  link: "./default"
+  link: "./"
 - name: "Terms of service"
   link: "./terms_of_service"
 - name: "Privacy Policy"
