--- a/main.yml
+++ b/main.yml
@@ -19,7 +19,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run script
-      run: python script.py
+      run: whttic.py
     - name: Commit and push
       run: |
         git config --local user.email "action@github.com"
