--- a/main.yml
+++ b/main.yml
@@ -1,3 +1,4 @@
+
 name: TikTok Webhook
 on:
   push:
@@ -8,6 +9,9 @@ jobs:
   tiktok-webhook:
     runs-on: ubuntu-latest
     steps:
+    - name: Install dependencies
+    run: |
+      pip install -r requirements.txt
     - name: Checkout
       uses: actions/checkout@v2
     - name: Respond to TikTok webhook
