--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -15,10 +15,11 @@ permissions:
   pages: write
   id-token: write
 
-# Allow one concurrent deployment
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
-  cancel-in-progress: true
+  cancel-in-progress: false
 
 jobs:
   # Build job
@@ -26,19 +27,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup Pages
-        uses: actions/configure-pages@v2
+        uses: actions/configure-pages@v4
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
-          source: ./page/
+          source: ./
           destination: ./_site
       - name: Upload artifact
-        uses: actions/upload-artifact@v4  # Using the correct version
-        with:
-          name: jekyll-site-artifact  # Name of the artifact
-          path: ./_site  # Path to the folder containing the built site
+        uses: actions/upload-pages-artifact@v2
 
   # Deployment job
   deploy:
@@ -46,15 +44,8 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build  # Ensures the build job is completed before deployment
+    needs: build
     steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4  # Using the correct version
-        with:
-          name: jekyll-site-artifact  # The name of the artifact uploaded in the build step
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1
-        with:
-          artifact_path: ./_site  # Explicit path to the artifact folder
-
+        uses: actions/deploy-pages@v2
