--- a/page/_config.yml
+++ b/page/_config.yml
@@ -1,4 +1,10 @@
-remote_theme: pages-themes/leap-day@v0.2.0
+remote_theme: pages-themes/leap-day
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-remote-theme
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  - jekyll-feed
+  - jekyll-paginate
+  - jekyll-archives
+  - jekyll-remote-theme # add this line to the plugins list if you already have one
 show_downloads: false
