--- a/page/_config.yml
+++ b/page/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: pages-themes/leap-day
+remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
   - jekyll-remote-theme
   - jekyll-seo-tag
@@ -6,5 +6,4 @@ plugins:
   - jekyll-feed
   - jekyll-paginate
   - jekyll-archives
-  - jekyll-remote-theme # add this line to the plugins list if you already have one
 show_downloads: false
