--- a/page/_config.yml
+++ b/page/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: "jekyll-theme-leap-day@v0.2.0"
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-remote-theme
 show_downloads: false
