--- a/page/_config.yml
+++ b/page/_config.yml
@@ -1,4 +1,9 @@
 remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
   - jekyll-remote-theme
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  - jekyll-feed
+  - jekyll-paginate
+  - jekyll-archives
 show_downloads: false
