--- a/page/_config.yml
+++ b/page/_config.yml
@@ -1,9 +1,18 @@
-remote_theme: pages-themes/leap-day@v0.2.0
+title: Leaf Blog
+iconURL: assets/default-icon.png
+theme: jekyll-theme-leaf
+
+# for a clean URL
+permalink: :slug
+
+social:
+  twitter: _SupunKavinda
+  github: SupunKavinda
+
 plugins:
-  - jekyll-remote-theme
-  - jekyll-seo-tag
-  - jekyll-sitemap
-  - jekyll-feed
-  - jekyll-paginate
-  - jekyll-archives
-show_downloads: false
+ - jekyll-feed
+ - jekyll-seo-tag
+
+### comments & analytics
+hyvor_talk_website_id: 14
+google_analytics: UA-NNNNNNNN-N
