--- a/page/_config.yml
+++ b/page/_config.yml
@@ -1,18 +1,3 @@
-title: Leaf Blog
-iconURL: assets/default-icon.png
-theme: jekyll-theme-leaf
-
-# for a clean URL
-permalink: :slug
-
-social:
-  twitter: _SupunKavinda
-  github: SupunKavinda
-
+remote_theme: pages-themes/hacker@v0.2.0
 plugins:
- - jekyll-feed
- - jekyll-seo-tag
-
-### comments & analytics
-hyvor_talk_website_id: 14
-google_analytics: UA-NNNNNNNN-N
+- jekyll-remote-theme # add this line to the plugins list if you already have one
